--- a/description.html
+++ b/description.html
@@ -201,7 +201,7 @@
 
   <footer class="footer" >
     
-    <p>&copy; 2025 Adeoye Emmanuel. All rights reserved.</p>
+    <p>&copy; 2025  Adeoye100. All rights reserved.</p>
   </footer>
 
   <script src="js/description.js"></script>
