--- a/description.html
+++ b/description.html
@@ -22,7 +22,7 @@
     />
     <link rel="shortcut icon" type="image/png" href="images/download.png" />
 
-    <link rel="stylesheet" type="text/css" href="css/description.css?v=2" />
+    <link rel="stylesheet" type="text/css" href="css/description.css" />
 
     <title>My Portfolio</title>
   </head>
